--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Deploy Website to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: dist
         publish_branch: gh-pages
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        cname: gib.murl.is
