--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         persist-credentials: false # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
 
-    - name: Setup Node.js for use with actions
+    - name: Setup and Run Node.js Build
       uses: actions/setup-node@v1.1.0
       with:
         version: '12.x'
