--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./"
+    "build": "mkdir -p dist/static/ && cp -r src/static/. dist/static/ && parcel build src/index.html --public-url ./"
   },
   "repository": {
     "type": "git",
