--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -16,10 +16,11 @@ jobs:
       with:
         persist-credentials: false # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
 
-    - name: Setup and Run Node.js Build
+    - name: Set up node.js
       uses: actions/setup-node@v1.1.0
       with:
         version: '12.x'
+
     - run: npm ci
     - run: npm run build
 
